# scDiff

./: .gitignore  LICENSE  README.md  data_info.csv  main.py  pyproject.toml  requirements.txt
configs/: cellxgene_topk_finetune.yaml  eval_annotation.yaml  eval_annotation_cellxgene.yaml  eval_denoising.yaml  eval_genepert.yaml  eval_integration.yaml  eval_perturbation.yaml
notebooks/: fewshot_cta_analysis.ipynb  gene_pert_perf.ipynb
results/: fewshot_cta.csv
run/: oneshot.sh  run.sh
scdiff/: __init__.py  collate.py  config.py  evaluate.py  model.py  patches.py  typing.py
scdiff/data/: base.py  cellxgene.py  denoising.py  gene_pert.py  pancreas.py  pbmc12k.py  perturbation.py
scdiff/ext/gears/: __init__.py  data_utils.py  gears.py  inference.py  model.py  pertdata.py  utils.py
scdiff/modules/: classifier.py  text.py
scdiff/modules/diffusion_model/: __init__.py  decoder.py  embedder.py  encoder.py
scdiff/modules/layers/: attention.py  basic.py  scmodel.py
scdiff/utils/: data.py  diffusion.py  misc.py  modules.py
scripts/: data_stats.py  download_wnb_results.py
tests/data/: test_data_util.py
